--- a/src/main/resources/validationMessages.properties
+++ b/src/main/resources/validationMessages.properties
@@ -4,6 +4,18 @@ not.null.validation.message=MUST NOT BE NULL
 username.not.empty=USERNAME {not.empty.validation.message}
 username.not.null=USERNAME {not.null.validation.message}
 
+city.not.empty=CITY {not.empty.validation.message}
+city.not.null=CITY {not.null.validation.message}
+
+street.not.empty=STREET {not.empty.validation.message}
+street.not.null=STREET {not.null.validation.message}
+
+number.not.empty=NUMBER {not.empty.validation.message}
+number.not.null=NUMBER {not.null.validation.message}
+
+postalCode.not.empty=POSTAL CODE {not.empty.validation.message}
+postalCode.not.null=POSTAL CODE {not.null.validation.message}
+
 karateClub.not.empty=KARATE CLUB {not.empty.validation.message}
 karateClub.not.null=KARATE CLUB {not.null.validation.message}
 
