implemented rest controller and logic in service related to adding as an admin feedback for the user for particular training session

--- a/src/main/resources/validationMessages.properties
+++ b/src/main/resources/validationMessages.properties
@@ -27,3 +27,9 @@ role.not.null=ROLE {not.null.validation.message}
 
 password.not.empty=PASSWORD {not.empty.validation.message}
 password.not.null=PASSWORD {not.null.validation.message}
+
+comment.not.empty=COMMENT {not.empty.validation.message}
+comment.not.null=COMMENT {not.null.validation.message}
+
+starRating.not.empty=STAR RATING {not.empty.validation.message}
+starRating.not.null=STAR RATING {not.null.validation.message}
