implemented integration tests checking whether adding feedbacks works correctly and whether user cannot add feedback (only admin)

--- a/src/main/resources/validationMessages.properties
+++ b/src/main/resources/validationMessages.properties
@@ -31,5 +31,6 @@ password.not.null=PASSWORD {not.null.validation.message}
 comment.not.empty=COMMENT {not.empty.validation.message}
 comment.not.null=COMMENT {not.null.validation.message}
 
-starRating.not.empty=STAR RATING {not.empty.validation.message}
+starRating.min=STAR RATING MUST BE MIN 1
+starRating.max=STAR RATING MUST BE MAX 5
 starRating.not.null=STAR RATING {not.null.validation.message}
