--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ configurations {
 
 repositories {
     mavenCentral()
+    maven { url 'https://jitpack.io' }
 }
 
 flyway {
@@ -55,6 +56,7 @@ dependencies {
     testImplementation 'org.testcontainers:postgresql'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation group: 'com.auth0', name: 'java-jwt', version: '4.4.0'
+    implementation 'com.paypal.sdk:checkout-sdk:1.0.4'
 }
 
 test {
