--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,7 +25,8 @@ auth:
     issuer: karate-management-system-backend
 
 paypal:
-  mode: sandbox
+  mode: "sandbox"
   client-id: ${PAYPAL_CLIENT_ID}
   client-secret: ${PAYPAL_CLIENT_SECRET}
+  amount: 150.00
   currency: PLN
