implemented scheduler for sending emails to users that have debt, added column "email" to table users, changed entity UserEntity to have this column and corrected whole logic and unit and integration tests related to the user (email constraint and not null email constraint)

--- a/src/main/resources/validationMessages.properties
+++ b/src/main/resources/validationMessages.properties
@@ -4,6 +4,9 @@ not.null.validation.message=MUST NOT BE NULL
 username.not.empty=USERNAME {not.empty.validation.message}
 username.not.null=USERNAME {not.null.validation.message}
 
+email.not.empty=EMAIL {not.empty.validation.message}
+email.not.null=EMAIL {not.null.validation.message}
+
 city.not.empty=CITY {not.empty.validation.message}
 city.not.null=CITY {not.null.validation.message}
 
