--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation group: 'com.auth0', name: 'java-jwt', version: '4.0.0'
     implementation 'com.paypal.sdk:checkout-sdk:1.0.4'
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
 }
 
 test {
