--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,7 @@ dependencies {
     implementation 'com.paypal.sdk:checkout-sdk:1.0.4'
     implementation 'org.springframework.boot:spring-boot-starter-mail'
     testImplementation 'com.icegreen:greenmail:1.6.10'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'
 }
 
 test {
