--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,5 +22,15 @@ services:
     ports:
       - "5050:80"
 
+  jenkins:
+    image: jenkins/jenkins:lts
+    ports:
+      - "8090:8080"
+      - "50000:50000"
+    volumes:
+      - jenkins_home:/var/jenkins_home
+      - /var/run/docker.sock:/var/run/docker.sock
+
 volumes:
   postgres-data:
+  jenkins_home:
