--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,12 @@
     "axios": "^1.10.0",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.13",
+    "i18next": "^25.2.1",
+    "i18next-browser-languagedetector": "^8.2.0",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.5.3",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
     "tailwindcss": "^4.1.10"
