--- a/microservices/club-service/src/main/resources/application.yml
+++ b/microservices/club-service/src/main/resources/application.yml
@@ -1,9 +1,6 @@
 server:
   port: 8082
 
-user-service:
-  url: http://localhost:8081
-
 spring:
   application:
     name: club-service
@@ -24,3 +21,10 @@ spring:
     enabled: true
     locations: classpath:db/migration
     baseline-on-migrate: true
+
+eureka:
+  instance:
+    instance-id: ${spring.application.name}:${server.port}
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
