--- a/microservices/user-service/src/main/resources/application.yml
+++ b/microservices/user-service/src/main/resources/application.yml
@@ -1,9 +1,6 @@
 server:
   port: 8081
 
-club-service:
-  url: http://localhost:8082
-
 spring:
   application:
     name: user-service
@@ -30,3 +27,10 @@ auth:
     secretKey: ${JWT_SECRET:defaultSecretKey}
     expirationDays: ${JWT_EXPIRATION_DAYS:30}
     issuer: karate-management-system-backend
+
+eureka:
+  instance:
+    instance-id: ${spring.application.name}:${server.port}
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
