--- a/microservices/club-service/src/main/resources/application.yml
+++ b/microservices/club-service/src/main/resources/application.yml
@@ -1,30 +1,5 @@
-server:
-  port: 8082
-
 spring:
   application:
     name: club-service
-
-  datasource:
-    url: jdbc:postgresql://localhost:5435/club_db
-    username: postgres
-    password: postgres
-    driver-class-name: org.postgresql.Driver
-
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
-    open-in-view: false
-
-  flyway:
-    enabled: true
-    locations: classpath:db/migration
-    baseline-on-migrate: true
-
-eureka:
-  instance:
-    instance-id: ${spring.application.name}:${server.port}
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
+  config:
+    import: optional:configserver:http://localhost:8888
