--- a/microservices/config-server/src/main/resources/application.yml
+++ b/microservices/config-server/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
       server:
         git:
           uri: https://github.com/Senegalion/karate-config-server-repo
-          default-label: master
+          default-label: main
           clone-on-start: true
 
 eureka:
