--- a/microservices/user-service/src/main/resources/application.yml
+++ b/microservices/user-service/src/main/resources/application.yml
@@ -3,3 +3,8 @@ spring:
     name: user-service
   config:
     import: optional:configserver:http://localhost:8888
+  rabbitmq:
+    host: rabbitmq
+    port: 5672
+    username: guest
+    password: guest
