Corrected paths to user-service in api-gateway application.yml

--- a/microservices/api-gateway/src/main/resources/application.yml
+++ b/microservices/api-gateway/src/main/resources/application.yml
@@ -9,10 +9,13 @@ spring:
       server:
         webflux:
           routes:
-            - id: user-service
+            - id: user-service-users
               uri: lb://user-service
               predicates:
                 - Path=/users/**
+            - id: user-service-auth
+              uri: lb://user-service
+              predicates:
                 - Path=/auth/**
             - id: club-service
               uri: lb://club-service
