--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,20 +3,24 @@ version: "3.8"
 services:
   # --- Infrastructure ---
 
-  config-server:
-    build:
-      context: ./microservices/config-server
-      dockerfile: Dockerfile
-    ports:
-      - "8780:8888"
-    restart: always
-
   service-registry:
     build:
       context: ./microservices/service-registry
       dockerfile: Dockerfile
     ports:
       - "8761:8761"
+    restart: always
+
+  config-server:
+    build:
+      context: ./microservices/config-server
+      dockerfile: Dockerfile
+    ports:
+      - "8888:8888"
+    environment:
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://service-registry:8761/eureka/
+    depends_on:
+      - service-registry
     restart: always
 
   api-gateway:
