--- a/microservices/user-service/Dockerfile
+++ b/microservices/user-service/Dockerfile
@@ -1,4 +1,4 @@
 FROM eclipse-temurin:17-jdk-jammy
 WORKDIR /app
-COPY target/userservice.jar userservice.jar
+COPY build/libs/*.jar userservice.jar
 ENTRYPOINT ["java", "-jar", "userservice.jar"]
