--- a/microservices/user-service/src/main/resources/application.yml
+++ b/microservices/user-service/src/main/resources/application.yml
@@ -1,8 +1,11 @@
 spring:
   application:
     name: user-service
-  config:
-    import: optional:configserver:http://config-server:8888
+  cloud:
+    config:
+      uri: http://config-server:8888
+      fail-fast: true
+      name: user-service+++
   rabbitmq:
     host: rabbitmq
     port: 5672
