--- a/microservices/api-gateway/src/main/resources/application.yml
+++ b/microservices/api-gateway/src/main/resources/application.yml
@@ -29,18 +29,15 @@ spring:
               uri: lb://feedback-service
               predicates:
                 - Path=/feedbacks/**
-          discovery:
-            locator:
-              enabled: true
-              lower-case-service-id: true
 
 logging:
   level:
-    org.springframework.cloud.gateway: DEBUG
+    org.springframework.cloud.gateway: INFO
 
 eureka:
   instance:
     instance-id: ${spring.application.name}:${server.port}
   client:
     service-url:
-      defaultZone: http://service-registry:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/
+#      defaultZone: http://service-registry:8761/eureka/
