--- a/microservices/feedback-service/build.gradle
+++ b/microservices/feedback-service/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
 	// --- Spring Cloud dependencies ---
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
@@ -60,6 +61,9 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	// --- Other libraries ---
+	implementation 'com.auth0:java-jwt:4.0.0'
 }
 
 dependencyManagement {
