--- a/microservices/feedback-service/src/main/resources/validationMessages.properties
+++ b/microservices/feedback-service/src/main/resources/validationMessages.properties
@@ -1,8 +1,8 @@
 not.empty.validation.message=MUST NOT BE EMPTY
 not.null.validation.message=MUST NOT BE NULL
+not.blank.validation.message=MUST NOT BE BLANK
 
-comment.not.empty=COMMENT {not.empty.validation.message}
-comment.not.null=COMMENT {not.null.validation.message}
+comment.not.blank=COMMENT {not.blank.validation.message}
 
 starRating.min=STAR RATING MUST BE MIN 1
 starRating.max=STAR RATING MUST BE MAX 5
