--- a/microservices/auth-service/build.gradle
+++ b/microservices/auth-service/build.gradle
@@ -42,6 +42,10 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 
+	// --- Caffeine cache ---
+	// Recommended by Spring Cloud LoadBalancer for production caching
+	implementation 'com.github.ben-manes.caffeine:caffeine'
+
 	// --- Messaging (RabbitMQ) ---
 	implementation 'org.springframework.boot:spring-boot-starter-amqp'
 	testImplementation 'org.springframework.amqp:spring-rabbit-test'
