--- a/microservices/service-registry/build.gradle
+++ b/microservices/service-registry/build.gradle
@@ -25,6 +25,14 @@ dependencies {
 	// --- Spring Cloud dependencies ---
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
 
+	// --- Bean Validation (Hibernate Validator) ---
+	// Added to avoid NoProviderFoundException in logs
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+	// --- Caffeine cache ---
+	// Recommended by Spring Cloud LoadBalancer for production caching
+	implementation 'com.github.ben-manes.caffeine:caffeine'
+
 	// --- Testing dependencies ---
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
