--- a/microservices/training-service/src/main/resources/application.yml
+++ b/microservices/training-service/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 spring:
   application:
     name: training-service
+  cache:
+    type: caffeine
   config:
     import: optional:configserver:http://localhost:8888
 #    import: optional:configserver:http://config-server:8888
