--- a/microservices/api-gateway/src/main/resources/application.yml
+++ b/microservices/api-gateway/src/main/resources/application.yml
@@ -31,6 +31,10 @@ spring:
               uri: lb://feedback-service
               predicates:
                 - Path=/feedbacks/**
+            - id: enrollment-service
+              uri: lb://enrollment-service
+              predicates:
+                - Path=/enrollments/**
 
 logging:
   level:
