--- a/microservices/notification-service/src/main/resources/application.yml
+++ b/microservices/notification-service/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
   #    import: optional:configserver:http://config-server:8888
   cloud:
     stream:
-      default-binder: rabbit
+      default-binder: kafka
       bindings:
         user-events-in:
           destination: user-events
@@ -22,6 +22,10 @@ spring:
           destination: feedback-events
           group: notification-service
           binder: kafka
+        springCloudBusInput:
+          binder: rabbit
+        springCloudBusOutput:
+          binder: rabbit
   rabbitmq:
     host: localhost
     #    host: rabbitmq
@@ -29,17 +33,29 @@ spring:
     username: guest
     password: guest
 
-  mail:
-    host: ${MAIL_HOST:localhost}
-    port: ${MAIL_PORT:3025}
-    username: ${MAIL_USERNAME:defaultUsername}
-    password: ${MAIL_PASSWORD:defaultPassword}
-    properties:
-      mail:
-        smtp:
-          auth: true
-          starttls:
-            enable: true
-      timeout: ${MAIL_PROPERTIES_TIMEOUT:5000}
-      connectiontimeout: ${MAIL_PROPERTIES_CONNECTION_TIMEOUT:5000}
-      writetimeout: ${MAIL_PROPERTIES_WRITE_TIMEOUT:5000}
+  kafka:
+    bootstrap-servers: localhost:9092
+    consumer:
+      group-id: notification-service
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+      properties:
+        spring.deserializer.value.delegate.class: org.springframework.kafka.support.serializer.JsonDeserializer
+        spring.json.trusted.packages: "*"
+        spring.json.value.default.type: com.karate.notification_service.infrastructure.messaging.dto.EnrollmentEvent
+        spring.json.use.type.headers: false
+
+#  mail:
+#    host: ${MAIL_HOST:localhost}
+#    port: ${MAIL_PORT:3025}
+#    username: ${MAIL_USERNAME:defaultUsername}
+#    password: ${MAIL_PASSWORD:defaultPassword}
+#    properties:
+#      mail:
+#        smtp:
+#          auth: true
+#          starttls:
+#            enable: true
+#      timeout: ${MAIL_PROPERTIES_TIMEOUT:5000}
+#      connectiontimeout: ${MAIL_PROPERTIES_CONNECTION_TIMEOUT:5000}
+#      writetimeout: ${MAIL_PROPERTIES_WRITE_TIMEOUT:5000}
