--- a/microservices/auth-service/build.gradle
+++ b/microservices/auth-service/build.gradle
@@ -48,7 +48,10 @@ dependencies {
 
 	// --- Messaging (RabbitMQ) ---
 	implementation 'org.springframework.boot:spring-boot-starter-amqp'
+	implementation 'org.springframework.kafka:spring-kafka'
+	implementation 'org.springframework.cloud:spring-cloud-stream-binder-kafka'
 	testImplementation 'org.springframework.amqp:spring-rabbit-test'
+	testImplementation 'org.springframework.kafka:spring-kafka-test'
 
 	// --- Database migration (Flyway) ---
 	implementation 'org.flywaydb:flyway-core'
