Added CRUD methods for managing user

--- a/microservices/auth-service/src/main/resources/validationMessages.properties
+++ b/microservices/auth-service/src/main/resources/validationMessages.properties
@@ -1,11 +1,13 @@
 not.empty.validation.message=MUST NOT BE EMPTY
 not.null.validation.message=MUST NOT BE NULL
+invalid=IS INVALID
 
 username.not.empty=USERNAME {not.empty.validation.message}
 username.not.null=USERNAME {not.null.validation.message}
 
 email.not.empty=EMAIL {not.empty.validation.message}
 email.not.null=EMAIL {not.null.validation.message}
+email.invalid= EMAIL {invalid}
 
 address.not.null=ADDRESS {not.null.validation.message}
 
