--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,6 +67,24 @@ services:
       - "9092:9092"
     restart: always
 
+  zipkin:
+    image: openzipkin/zipkin:2
+    container_name: zipkin
+    ports:
+      - "9411:9411"
+    restart: unless-stopped
+
+#  prometheus:
+#    image: prom/prometheus:latest
+#    ports: [ "9090:9090" ]
+#    volumes:
+#      - ./infra/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+#
+#  grafana:
+#    image: grafana/grafana:latest
+#    ports: [ "3001:3000" ]
+#    depends_on: [ prometheus ]
+
   # --- Databases ---
 
   postgres:
