--- a/microservices/auth-service/build.gradle
+++ b/microservices/auth-service/build.gradle
@@ -73,6 +73,8 @@ dependencies {
 	implementation 'io.micrometer:micrometer-tracing-bridge-brave'
 	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
 	implementation 'io.zipkin.reporter2:zipkin-reporter-brave'
+	implementation 'io.micrometer:micrometer-tracing'
+	implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
 
 	// --- Other libraries ---
 	implementation 'com.auth0:java-jwt:4.0.0'
