add circuit breaker, time limiter and retry mechanisms in auth-service

--- a/microservices/auth-service/src/main/resources/application-dev.yml
+++ b/microservices/auth-service/src/main/resources/application-dev.yml
@@ -24,3 +24,11 @@ feign:
     config:
       default:
         loggerLevel: FULL
+
+resilience4j:
+  circuitbreaker:
+    instances:
+      userService:
+        slidingWindowSize: 5
+        failureRateThreshold: 20
+        waitDurationInOpenState: 2s
