create unit and integration tests in user-service

--- a/microservices/user-service/build.gradle
+++ b/microservices/user-service/build.gradle
@@ -66,6 +66,10 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    testImplementation 'org.testcontainers:junit-jupiter'
+    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
+    testImplementation 'org.testcontainers:rabbitmq'
+    testImplementation 'org.testcontainers:postgresql'
 
     // --- Tracing and observability ---
     implementation 'io.micrometer:micrometer-tracing-bridge-brave'
