--- a/microservices/notification-service/build.gradle
+++ b/microservices/notification-service/build.gradle
@@ -65,6 +65,16 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	testImplementation 'com.icegreen:greenmail:2.1.3'
+	testImplementation 'com.icegreen:greenmail-junit5:2.1.3'
+
+	// --- Tracing and observability ---
+	implementation 'io.micrometer:micrometer-tracing-bridge-brave'
+	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
+	implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
+	implementation 'io.github.resilience4j:resilience4j-spring-boot3'
+	implementation 'io.github.resilience4j:resilience4j-micrometer'
+	implementation 'io.zipkin.reporter2:zipkin-reporter-brave'
 
 	// --- Other libraries ---
 	implementation 'com.auth0:java-jwt:4.0.0'
