--- a/microservices/notification-service/src/main/resources/application.yml
+++ b/microservices/notification-service/src/main/resources/application.yml
@@ -43,17 +43,17 @@ spring:
         spring.deserializer.value.delegate.class: org.springframework.kafka.support.serializer.JsonDeserializer
         spring.json.trusted.packages: "*"
 
-#  mail:
-#    host: ${MAIL_HOST:localhost}
-#    port: ${MAIL_PORT:3025}
-#    username: ${MAIL_USERNAME:defaultUsername}
-#    password: ${MAIL_PASSWORD:defaultPassword}
-#    properties:
-#      mail:
-#        smtp:
-#          auth: true
-#          starttls:
-#            enable: true
-#      timeout: ${MAIL_PROPERTIES_TIMEOUT:5000}
-#      connectiontimeout: ${MAIL_PROPERTIES_CONNECTION_TIMEOUT:5000}
-#      writetimeout: ${MAIL_PROPERTIES_WRITE_TIMEOUT:5000}
+  mail:
+    host: ${MAIL_HOST:localhost}
+    port: ${MAIL_PORT:3025}
+    username: ${MAIL_USERNAME:defaultUsername}
+    password: ${MAIL_PASSWORD:defaultPassword}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+      timeout: ${MAIL_PROPERTIES_TIMEOUT:5000}
+      connectiontimeout: ${MAIL_PROPERTIES_CONNECTION_TIMEOUT:5000}
+      writetimeout: ${MAIL_PROPERTIES_WRITE_TIMEOUT:5000}
