create unit and integration tests in feedback-service and add logging

--- a/microservices/user-service/src/main/resources/application-test.yml
+++ b/microservices/user-service/src/main/resources/application-test.yml
@@ -1,6 +1,24 @@
 spring:
   config:
     activate.on-profile: test
+    import: ""
+  cloud:
+    config:
+      enabled: false
+    discovery:
+      enabled: false
+    bus:
+      enabled: false
+    stream:
+      enabled: false
+  main:
+    cloud-platform: none
+
+  eureka:
+    client:
+      enabled: false
+      register-with-eureka: false
+      fetch-registry: false
 
 management:
   tracing:
