--- a/microservices/training-service/build.gradle
+++ b/microservices/training-service/build.gradle
@@ -56,6 +56,7 @@ dependencies {
 
 	// --- Database driver ---
 	runtimeOnly 'org.postgresql:postgresql'
+	runtimeOnly 'com.h2database:h2'
 
 	// --- Lombok for boilerplate code reduction ---
 	compileOnly 'org.projectlombok:lombok'
@@ -65,14 +66,18 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	testImplementation 'org.testcontainers:junit-jupiter'
+	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
+	testImplementation 'org.testcontainers:rabbitmq'
+	testImplementation 'org.testcontainers:postgresql'
 
 	// --- Tracing and observability ---
 	implementation 'io.micrometer:micrometer-tracing-bridge-brave'
 	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
 	implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
-	runtimeOnly  'io.micrometer:micrometer-tracing-reporters-zipkin'
 	implementation 'io.github.resilience4j:resilience4j-spring-boot3'
 	implementation 'io.github.resilience4j:resilience4j-micrometer'
+	implementation 'io.zipkin.reporter2:zipkin-reporter-brave'
 
 	// Circuit Breaker
 	implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-reactor-resilience4j'
