--- a/microservices/notification-service/src/main/resources/application-prod.yml
+++ b/microservices/notification-service/src/main/resources/application-prod.yml
@@ -2,6 +2,23 @@ spring:
   config:
     activate.on-profile: prod
 
+  mail:
+    host: ${MAIL_HOST:smtp.gmail.com}
+    port: ${MAIL_PORT:587}
+    username: ${MAIL_USERNAME}
+    password: ${MAIL_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+
+app:
+  mail:
+    from: ${APP_MAIL_FROM:${MAIL_USERNAME}}
+    fromName: ${APP_MAIL_FROM_NAME:Karate Management System}
+
 management:
   tracing:
     sampling:
