--- a/microservices/auth-service/src/main/resources/application.yml
+++ b/microservices/auth-service/src/main/resources/application.yml
@@ -30,9 +30,13 @@ spring:
     consumer:
       group-id: user-service
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
       properties:
-        spring.json.trusted.packages: "*"
+        spring.deserializer.value.delegate.class: org.springframework.kafka.support.serializer.JsonDeserializer
+        spring.json.trusted.packages: "com.karate.*"
+        spring.json.use.type.headers: false
+        spring.json.value.default.type: com.karate.authservice.infrastructure.messaging.dto.UserDeletedEvent
 
 topics:
   user-registered: user-events
+  user-deleted: user.deleted
