--- a/microservices/notification-service/src/main/resources/application.yml
+++ b/microservices/notification-service/src/main/resources/application.yml
@@ -33,27 +33,22 @@ spring:
     username: guest
     password: guest
 
-  kafka:
-    bootstrap-servers: localhost:9092
-    consumer:
-      group-id: notification-service
-      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
-      properties:
-        spring.deserializer.value.delegate.class: org.springframework.kafka.support.serializer.JsonDeserializer
-        spring.json.trusted.packages: "*"
-
   mail:
-    host: ${MAIL_HOST:localhost}
-    port: ${MAIL_PORT:3025}
-    username: ${MAIL_USERNAME:defaultUsername}
-    password: ${MAIL_PASSWORD:defaultPassword}
+    host: ${MAIL_HOST:smtp.gmail.com}
+    port: ${MAIL_PORT:587}
+    username: ${MAIL_USERNAME:lupelikan@gmail.com}
+    password: ${MAIL_PASSWORD:pgsb mngi otlz swpu}
     properties:
       mail:
         smtp:
-          auth: true
+          auth: ${MAIL_SMTP_AUTH:true}
           starttls:
-            enable: true
+            enable: ${MAIL_SMTP_STARTTLS:true}
       timeout: ${MAIL_PROPERTIES_TIMEOUT:5000}
       connectiontimeout: ${MAIL_PROPERTIES_CONNECTION_TIMEOUT:5000}
       writetimeout: ${MAIL_PROPERTIES_WRITE_TIMEOUT:5000}
+
+app:
+  mail:
+    from: ${APP_MAIL_FROM:lupelikan@gmail.com}
+    fromName: ${APP_MAIL_FROM_NAME:Karate Management System}
