add redis database to club-service

--- a/microservices/club-service/build.gradle
+++ b/microservices/club-service/build.gradle
@@ -54,6 +54,8 @@ dependencies {
     // --- Database driver ---
     runtimeOnly 'org.postgresql:postgresql'
     runtimeOnly 'com.h2database:h2'
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
     // --- Lombok for boilerplate code reduction ---
     compileOnly 'org.projectlombok:lombok'
