--- a/Jenkins/Dockerfile.jenkins
+++ b/Jenkins/Dockerfile.jenkins
@@ -1,12 +1,3 @@
-FROM jenkins/jenkins:lts
-
-USER root
-
-RUN apt-get update && \
-    apt-get install -y openjdk-17-jdk && \
-    apt-get clean
-
-ENV JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
-ENV PATH=$JAVA_HOME/bin:$PATH
+FROM jenkins/jenkins:lts-jdk17
 
 USER jenkins
